--- a/src/assets/styles/scss/components/_sort.scss
+++ b/src/assets/styles/scss/components/_sort.scss
@@ -6,7 +6,7 @@
     display: flex;
     align-items: center;
 
-    svg {
+    img {
       margin-right: 8px;
     }
 
@@ -18,6 +18,7 @@
       color: $orange;
       border-bottom: 1px dashed $orange;
       cursor: pointer;
+      user-select: none;
     }
   }
 
@@ -37,6 +38,7 @@
       li {
         padding: 12px 20px;
         cursor: pointer;
+        user-select: none;
 
         &.active,
         &:hover {
