--- a/src/assets/styles/scss/app.scss
+++ b/src/assets/styles/scss/app.scss
@@ -24,12 +24,22 @@ body {
 .content {
   padding: 40px 0;
 
+  @media (max-width: 450px) {
+    padding-top: 0;
+  }
+
   &__title {
     margin: 35px 0;
 
     @media (max-width: 730px) {
       text-align: center;
     }
+  }
+
+  &__cart_items {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
 
   &__items {
@@ -41,9 +51,9 @@ body {
     @media (max-width: 1400px) {
       grid-template-columns: repeat(3, 1fr);
     }
-    
+
     @media (max-width: 1060px) {
-    grid-template-columns: repeat(2, 1fr);
+      grid-template-columns: repeat(2, 1fr);
     }
 
     @media (max-width: 730px) {
@@ -55,7 +65,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    
+
     @media (max-width: 1300px) {
       flex-direction: column-reverse;
       gap: 30px;
@@ -78,10 +88,16 @@ body {
 }
 
 .cart {
+
   &__top {
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    @media (max-width: 450px) {
+      flex-direction: column;
+      gap: 20px;
+    }
   }
 
   .content__title {
@@ -101,6 +117,7 @@ body {
         stroke: $black;
         stroke-width: 1.9;
       }
+
     }
   }
 
@@ -137,17 +154,34 @@ body {
   }
 
   &__item {
-    display: flex;
-    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 6fr 3fr 3fr 1fr;
+    grid-template-rows: 1fr;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
     border-top: 1px solid $gray-line;
     padding-top: 30px;
     margin-top: 30px;
+
+    @media (max-width: 760px) {
+      grid-template-columns: 1fr 6fr 2fr;
+      grid-template-rows: repeat(2, 0.5fr);
+      grid-column-gap: 0px;
+      grid-row-gap: 10px;
+    }
+
+    @media (max-width: 450px) {
+      grid-template-columns: 1fr 6fr 2fr;
+      grid-template-rows: repeat(2, 0.5fr);
+      grid-column-gap: 0px;
+      grid-row-gap: 10;
+    }
 
     &-img {
       display: flex;
       align-items: center;
       margin-right: 15px;
-      width: 10%;
+      flex-basis: 10%;
 
       img {
         width: 80px;
@@ -159,7 +193,7 @@ body {
       display: flex;
       flex-direction: column;
       justify-content: center;
-      width: 40%;
+      flex-basis: 40%;
 
       h3 {
         font-weight: bold;
@@ -177,8 +211,9 @@ body {
     &-count {
       display: flex;
       align-items: center;
-      justify-content: space-between;
-      width: 13%;
+      justify-content: center;
+      flex-basis: 13%;
+      gap: 7px;
 
       &-minus {
         svg {
@@ -197,7 +232,12 @@ body {
       display: flex;
       align-items: center;
       justify-content: center;
-      width: 33%;
+      flex-basis: 33%;
+
+      @media (max-width: 760px) {
+        margin-left: 10px;
+        justify-content: flex-start;
+      }
 
       b {
         font-weight: bold;
@@ -209,8 +249,12 @@ body {
     &-remove {
       display: flex;
       align-items: center;
-      justify-content: flex-end;
-      width: 4%;
+      justify-content: center;
+      flex-basis: 4%;
+
+      @media (max-width: 760px) {
+        grid-area: 1 / 3 / 3 / 4;
+      }
 
       .button {
         border-color: darken($color: $gray-line, $amount: 10);
@@ -247,6 +291,12 @@ body {
       display: flex;
       justify-content: space-between;
 
+      @media (max-width: 510px) {
+        flex-direction: column-reverse;
+        align-items: center;
+        gap: 15px;
+      }
+
       span {
         font-size: 22px;
 
@@ -262,6 +312,12 @@ body {
       display: flex;
       justify-content: space-between;
       margin-top: 40px;
+
+      @media (max-width: 510px) {
+        flex-direction: column-reverse;
+        align-items: center;
+        gap: 15px;
+      }
 
       .go-back-btn {
         display: flex;
