--- a/src/assets/styles/scss/app.scss
+++ b/src/assets/styles/scss/app.scss
@@ -70,6 +70,10 @@ body {
       flex-direction: column-reverse;
       gap: 30px;
     }
+
+    @media (max-width: 450px) {
+      margin-top: 20px;
+    }
   }
 }
 
