--- a/src/assets/styles/scss/components/_button.scss
+++ b/src/assets/styles/scss/components/_button.scss
@@ -96,6 +96,9 @@
   }
 
   &--add {
+    display: flex;
+    align-items: center;
+
     img {
       margin-right: 2px;
     }
@@ -134,6 +137,7 @@
     align-items: center;
     line-height: 23px;
     padding: 12px 25px;
+    justify-content: center;
 
     img {
       margin-right: 8px;
